unpackaged/main/default/objects/Business_Metrics__c/Business_Metrics__c.object-meta.xml
<CustomObject>
    <description>To snapshot and capture daily, monthly, and quarterly business metrics for MyCase and associated brands</description>
    <label>Business Metrics</label>
    <nameField>
        <displayFormat>BM-{00000000}</displayFormat>
        <label>Metrics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>