unpackaged/main/default/objects/Business_Metrics__c/fields/Beginning__c.field-meta.xml
<CustomField>
    <fullName>Beginning__c</fullName>
    <description>Beginning customers/users for the reported day/month</description>
    <inlineHelpText>Beginning customers/users for the reported day/month</inlineHelpText>
    <label>Beginning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>