unpackaged/main/default/objects/Business_Metrics__c/fields/Churned__c.field-meta.xml
<CustomField>
    <fullName>Churned__c</fullName>
    <description>Churned customers/users for the day/month/quarter</description>
    <label>Churned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>