unpackaged/main/default/objects/Business_Metrics__c/fields/Contraction__c.field-meta.xml
<CustomField>
    <fullName>Contraction__c</fullName>
    <defaultValue>0</defaultValue>
    <description>User contraction from customers active prior to current month</description>
    <label>Contraction</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>