unpackaged/main/default/objects/Business_Metrics__c/fields/Ending__c.field-meta.xml
<CustomField>
    <fullName>Ending__c</fullName>
    <description>Ending customers/users for the reported day/month</description>
    <formula>CASE( Category__c ,

&quot;Customers&quot;,

 Beginning__c + New__c + Churned__c + Returning__c, 

 Beginning__c + New__c + Churned__c + Returning__c + Expansion__c + Contraction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>