unpackaged/main/default/objects/Business_Metrics__c/fields/Expansion__c.field-meta.xml
<CustomField>
    <fullName>Expansion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expansion users from active customers prior to the current month</description>
    <inlineHelpText>Expansion users from active customers prior to the current month</inlineHelpText>
    <label>Expansion</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>