unpackaged/main/default/objects/Business_Metrics__c/fields/Future_Churn__c.field-meta.xml
<CustomField>
    <fullName>Future_Churn__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Customer/Users with Churn Date populated in the future</description>
    <inlineHelpText>Customer/Users with Churn Date populated in the future</inlineHelpText>
    <label>Future Churn</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>