unpackaged/main/default/objects/Business_Metrics__c/fields/Future_In_Month_Churn__c.field-meta.xml
<CustomField>
    <fullName>Future_In_Month_Churn__c</fullName>
    <description>Future Churn for users and customers in the current month</description>
    <inlineHelpText>Future Churn for users and customers in the current month</inlineHelpText>
    <label>Future In Month Churn</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>