unpackaged/main/default/objects/Business_Metrics__c/fields/Historical__c.field-meta.xml
<CustomField>
    <fullName>Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for historical upload</description>
    <label>Historical</label>
    <type>Checkbox</type>
</CustomField>