unpackaged/main/default/objects/Business_Metrics__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Future Churn</fullName>
            </value>
            <value>
                <fullName>Returning</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>