unpackaged/main/default/objects/Business_Metrics__c/fields/Month_End__c.field-meta.xml
<CustomField>
    <fullName>Month_End__c</fullName>
    <description>TRUE if reported date is last day of month</description>
    <formula>IF( Reported_Date__c = TODAY() - 1, TRUE,

IF(
IF( MONTH( Reported_Date__c ) = 12, 
DATE( YEAR( Reported_Date__c ), 12, 31 ), 
DATE( YEAR( Reported_Date__c ), MONTH( Reported_Date__c ) + 1, 1) - 1) = Reported_Date__c, TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month End</label>
    <type>Checkbox</type>
</CustomField>