unpackaged/main/default/objects/Business_Metrics__c/fields/Net_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Net_Expansion__c</fullName>
    <formula>Expansion__c + Contraction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Expansion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>