unpackaged/main/default/objects/Business_Metrics__c/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <description>New customers or users for the day/month/quarter</description>
    <label>New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>