unpackaged/main/default/objects/Business_Metrics__c/fields/Potential_Churn__c.field-meta.xml
<CustomField>
    <fullName>Potential_Churn__c</fullName>
    <description>Churned customers and users + in month future churn for customers and users</description>
    <formula>Churned__c + Future_In_Month_Churn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Churn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>