unpackaged/main/default/objects/Business_Metrics__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <description>Date that metric was captured</description>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>