unpackaged/main/default/objects/Business_Metrics__c/fields/Returning__c.field-meta.xml
<CustomField>
    <fullName>Returning__c</fullName>
    <description>Returning customers/users for the day/month/quarter</description>
    <label>Returning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>