unpackaged/main/default/objects/Business_Metrics__c/fields/Suspended__c.field-meta.xml
<CustomField>
    <fullName>Suspended__c</fullName>
    <description>Total Customers and Users that are currently suspended and set to churn this month</description>
    <label>Suspended</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>