unpackaged/main/default/objects/Business_Metrics__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for testing to delete later</description>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>