unpackaged/main/default/objects/Business_Metrics__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of metric captured for summary purposes</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>